--- a/_posts/2023-07-04-PHVV.markdown
+++ b/_posts/2023-07-04-PHVV.markdown
@@ -1,9 +1,11 @@
 ---
 layout: post
 title:  'Сайт "PPHV"'
+description: 'Разработка сайта постойки бунгало в Испании'
 date:   2023-07-04 18:44:37 +0700
 categories: jekyll update
 thumbnail: /assets/img/portfolio/5.jpg
+image: /assets/img/portfolio/5.jpg
 ---
 Разработка сайта постойки бунгало в Испании
 
