--- a/_posts/2023-07-04-megadent.markdown
+++ b/_posts/2023-07-04-megadent.markdown
@@ -1,9 +1,11 @@
 ---
 layout: post
 title:  'Вёрстка страниц сайта "Мегадент"'
+description: 'Страницы для сайта "Мегадент". Не были опубликованы на сайте, имеются только статичные страницы'
 date:   2023-07-04 18:44:37 +0700
 categories: jekyll update
 thumbnail: /assets/img/portfolio/7.jpg
+image: /assets/img/portfolio/7.jpg
 ---
 Страницы для сайта "Мегадент". Не были опубликованы на сайте, имеются только статичные страницы
 
