--- a/_posts/2023-10-05-bolt-37.markdown
+++ b/_posts/2023-10-05-bolt-37.markdown
@@ -4,8 +4,8 @@ title:  'bolt37.ru'
 description: 'Разработка магазина'
 date:   2023-10-05 14:53:00 +0700
 categories: jekyll update
-thumbnail: /assets/img/portfolio/9.jpg
-image: /assets/img/portfolio/9.jpg
+thumbnail: /assets/img/portfolio/9.png
+image: /assets/img/portfolio/9.png
 ---
 Разработка магазина на CMS Wordpress и Woocommerce.
 
